Fixed nabar issue on mobile

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -30,9 +30,6 @@ html, body{
     background-color: #474849;
 }
 
-
-
-
 /* The below code was found on stackoverflow 
 as a solution to get rid of the bootstrap blue on click 
 (https://stackoverflow.com/a/54484583/14461213) */
@@ -60,23 +57,12 @@ background-color: #515253;
     padding-top: 50px;
 }
 
-/* Drop down menu bug solution (not fixed) */
-
-.nav-link{
-    width: 100%;
+.dropdown-item{
+    text-align: center;
 }
 
-
-/* Move ul to the right and keep logo to the left */
-
-.navbar{
-    float: none;
-    position: relative;
-}
-
-.navbar-nav{
-    position: absolute;
-    right: 20px;
+.navbar-brand{
+    font-size: 1.3rem;
 }
 
 /******************************************* Footer ********************/
